# FEXTools

./: .gitignore  CMakeLists.txt  Function.txt  InputTest.txt  README.md  main.cpp
ExampleProject/: CMakeLists.txt  main.cpp
ExampleProject/IO/: Data.txt  FA_RP  FA_UI  FD_RP  FD_RP20  FD_UI  FD_UI20  FR_AP  FR_AP2  FR_DP  Filter_RP  Filter_UI  Function.txt  Interpolator.txt  Pmax_AP  Pmax_DP  Pmax_DP2  Pmax_RP
ExampleProject/IO_DataSet/: Red_RP.txt
ExampleProject/IO_DataSets/: Green.txt  RP_Stack.txt  Red.txt  UI_Stack.txt  Yellow.txt
ExampleProject/IO_Filters/: RP  UI
ExampleProject/IO_FixedAngle/: RP  UI
ExampleProject/IO_FixedDistance/: RP  RP20  UI  UI20
ExampleProject/IO_FixedResistance/: AP  AP2  DP
ExampleProject/IO_Functions/: Roptim.txt  UI_Amarelo.txt  UI_Azul.txt  UI_Verde.txt  UI_Vermelho.txt
ExampleProject/IO_Input/: FA_Roptim.txt  FD_Roptim.txt  FR_AP.txt  FR_AP2.txt  PmaxAP.txt  RP_20cm20deg.txt  RP_20cm20degneg.txt  RP_25cm0deg.txt  RP_30cm0deg.txt  RP_35cm0deg.txt  RP_Amarelo.txt  RP_Azul.txt  RP_Verde.txt  RP_Vermelho.txt  Roptim.txt  UI_15cm0deg.txt  UI_20cm0deg.txt  UI_20cm20deg.txt  UI_20cm20degneg.txt  UI_20cm40deg.txt  UI_20cm60deg.txt  UI_25cm0deg.txt  UI_35cm0deg.txt  UI_Amarelo.txt  UI_Blue.txt  UI_Vermelho.txt  UI_Yellow.txt
ExampleProject/IO_Interpolations/: RP_Amarelo.txt  RP_Azul.txt  RP_Verde.txt  RP_Vermelho.txt
ExampleProject/IO_Pmax/: AP  DP  DP2  RP
ExampleProject/Input/: FR_DP.txt  PmaxAP.txt  PmaxDP.txt  PmaxRP.txt  RP_10cm0deg.txt  RP_15cm0deg.txt  RP_20cm0deg.txt  RP_20cm40deg.txt  RP_20cm60deg.txt  UI_10cm0deg.txt  UI_20cm20deg.txt  UI_30cm0deg.txt  UI_Green.txt
ExampleProject/src/: main.cpp
FEXTools/: CMakeLists.txt  FEXTools.h
FEXTools/Core/: Core.cpp  Core.h  Log.h
FEXTools/FToolsClasses/: DataSet.cpp  DataSet.h  DataStack.cpp  DataStack.h  FToolsObject.cpp  FToolsObject.h  Fitter.cpp  Fitter.h  FunctionPlotter.cpp  FunctionPlotter.h  Interpolator.cpp  Interpolator.h
FEXTools/include/: Core.h  DataSet.h  DataStack.h  FEXTools.h  FToolsObject.h  Fitter.h  FunctionFitter.h  Interpolator.h  Log.h  RootProperties.h
FEXTools/src/: Core.cpp  DataSet.cpp  DataStack.cpp  FToolsObject.cpp  Fitter.cpp  FunctionFitter.cpp  Interpolator.cpp  RootProperties.cpp
include/: Core.h  DataPoints.h  DataSet.h  DataStack.h  FEXTools.h  FunctionFitter.h  Interpolator.h
src/: DataPoints.cpp  DataSet.cpp  DataStack.cpp  FunctionFitter.cpp
